--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,5 +6,30 @@ spring:
           google:
             client-id: "${OAUTH2_GOOGLE_CLIENT_ID}"
             client-secret: "${OAUTH2_GOOGLE_CLIENT_SECRET}"
-            redirect-uri: http://localhost:8080/oauth/redirect/google
+            redirect-uri: "${OAUTH2_GOOGLE_REDIRECT_URI}"
             scope: profile,email
+
+          naver:
+            client-id: "${OAUTH2_NAVER_CLIENT_ID}"
+            client-secret: "${OAUTH2_NAVER_CLIENT_SECRET}"
+            redirect-uri: "${OAUTH2_NAVER_REDIRECT_URI}"
+            scope: nickname, email
+
+          kakao:
+            client-id: "${OAUTH2_KAKAO_CLIENT_ID}"
+            client-secret: "${OAUTH2_KAKAO_CLIENT_SECRET}"
+            redirect-uri: "${OAUTH2_KAKAO_REDIRECT_URI}"
+            scope: profile_nickname, account_email
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
